infrastructure/kubernetes/manifests/ray-cluster/ray-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ray
  name: ray-worker
spec:
  # Change this to scale the number of worker nodes started in the Ray cluster.
  replicas: 1
  selector:
    matchLabels:
      component: ray-worker
      type: ray
  template:
    metadata:
      labels:
        component: ray-worker
        type: ray
    spec:
      restartPolicy: Always
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
      nodeSelector:
        cloud.google.com/gke-nodepool: "preemptible-pool"
        cloud.google.com/gke-preemptible: "true"
      containers:
        - name: ray-worker
          image: rayproject/autoscaler
          imagePullPolicy: Always
          command: ["/bin/bash", "-c", "--"]
          args:
            - "ray start --node-ip-address=$MY_POD_IP --num-cpus=$MY_CPU_REQUEST --address=$RAY_HEAD_SERVICE_HOST:$RAY_HEAD_SERVICE_PORT_REDIS_PRIMARY --object-manager-port=12345 --node-manager-port=12346 --block"
          ports:
            - containerPort: 12345 # Ray internal communication.
            - containerPort: 12346 # Ray internal communication.
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
          resources:
            requests:
              cpu: 10m
              memory: 512Mi
            limits:
              cpu: 2
              memory: 2Gi
